--- a/src/components/Auth/Auth.module.scss
+++ b/src/components/Auth/Auth.module.scss
@@ -1,9 +1,10 @@
 .auth {
-  padding-top: 200px;
+  padding-top: 70px;
   display: flex;
   flex-direction: column;
   width: 100%;
   align-items: center;
+  position: relative;
 }
 .container {
   width: 80%;
@@ -15,42 +16,44 @@
 .title {
   font-size: 60px;
   color: rgb(230, 45, 31);
+  margin-bottom: 110px;
 }
 
-.form {
-  margin-top: 110px;
-}
-
-.inputs {
+.button {
   display: flex;
-  height: 80px;
+  justify-content: center;
+  align-items: center;
+  width: 185px;
+  border-radius: 30px;
+  height: 70px;
+  background-color: rgb(210, 11, 38);
+  font-size: 25px;
+  font-weight: 700;
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+  position: absolute;
+  left: 100px;
 }
 
-.inputs:last-child {
-  margin-top: 80px;
+.button:hover {
+  background-color: rgb(149, 14, 5);
 }
 
-.input {
-  width: 500px;
-  outline: none;
+.span {
+  width: 680px;
+  margin-top: 20px;
+  color: rgb(255, 255, 255);
+  font-size: 20px;
+}
+
+.buttonAuth {
+  font-size: 20px;
   color: rgb(230, 45, 31);
-  font-size: 30px;
+  text-decoration: none;
   background-color: rgba(0, 0, 0, 0);
   border: none;
-  border-bottom: 3px solid rgb(230, 45, 31);
 }
 
-.input:focus {
-    border-bottom: 3px solid rgb(248, 246, 246);
-}
-
-.text {
-    margin: 0;
-  color: rgb(230, 45, 31);
-  font-size: 30px;
-  margin-right: 30px;
-  width: 140px;
-  height: 100%;
-  display: flex;
-  align-items: center;
+.buttonAuth:hover {
+  color: rgb(149, 14, 5);
 }
