--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -1,26 +1,54 @@
 .navbar {
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.448);
-    color: white;
-    padding: 0px 20px;
-    position: fixed;
-    border-radius: 25px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  height: calc(100vh - 60px);
+  background-color: rgba(0, 0, 0, 0.448);
+  color: white;
+  padding: 30px 20px;
+  position: fixed;
+  border-radius: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .iconMain {
-    width: 55px;
-    height: 55px;
+  width: 55px;
+  height: 55px;
 }
 
 .navButton {
-    width: 50px;
-    height: 50px;
+  min-width: 50px;
+  height: 50px;
 }
 
+.icon {
+  opacity: 0.6;
+  &:hover {
+    opacity: 0.3;
+  }
+}
+
+.iconBlock {
+  display: flex;
+  align-items: center;
+}
+
+// .activeDot {
+//     padding: 0;
+//     margin-top: 10px;
+//     width: 10px;
+//     height: 10px;
+//     background-color: white;
+//     border-radius: 50%;
+//     font-size: 60px;
+//     margin-left: 5px;
+// }
+
 .icons {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+}
+
+.iconActive {
+ opacity: 1;
 }
