--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -3,7 +3,8 @@
   background-color: rgba(0, 0, 0, 0.448);
   color: white;
   padding: 30px 20px;
-  position: fixed;
+  position: sticky;
+  top: 0;
   border-radius: 25px;
   display: flex;
   flex-direction: column;
