--- a/src/pages/profile/profile.module.scss
+++ b/src/pages/profile/profile.module.scss
@@ -1,7 +1,11 @@
+@import '../../utils/mixins.scss';
+
 .profile {
-    width: calc(100vw - 22%);
+    width: 100%;
     display: flex;
-    justify-content: center;  
+    gap: 80px;
+    flex-direction: column;
+    align-items: center;  
     margin-top: 70px; 
 }
 
@@ -9,4 +13,32 @@
     border-radius: 50%;
     width: 120px;
     height: 120px;
+}
+
+.name {
+    @include color-text;
+    font-size: 36px;
+}
+
+.container {
+    width: 37%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    overflow: hidden;
+}
+
+.button {
+    width: 37%;
+    background-color: rgba(0, 0, 0, 0.7);
+    border: 3px solid black;
+    border-radius: 10px;
+    color: white;
+    font-size: 25px;
+    padding: 8px;
+
+    &:hover {
+        border: 3px solid red;
+        background-color: rgba(0, 0, 0, 0.7);
+    }
 }
